crates/graphql-project/tests/snapshots/validation_snapshots__apollo_client_directives_snapshot.snap
---
source: crates/graphql-project/tests/validation_snapshots.rs
expression: "all_diagnostics.join(\"\\n\\n\")"
---
=== Query 1 ===
Error: type `User` does not have a field `isLoggedIn`
   ╭─[ crates/graphql-project/tests/fixtures/apollo_client_directives.tsx:9:7 ]
   │
 9 │       isLoggedIn @client
   │       ─────┬────  
   │            ╰────── field `isLoggedIn` selected here
   │ 
   │ Note: path to the field: `query GetUser → user → isLoggedIn`
───╯


Error: type `User` does not have a field `localData`
    ╭─[ crates/graphql-project/tests/fixtures/apollo_client_directives.tsx:10:7 ]
    │
 10 │       localData @client(always: true)
    │       ────┬────  
    │           ╰────── field `localData` selected here
    │ 
    │ Note: path to the field: `query GetUser → user → localData`
────╯
